Version 1.1
Change `verbatim' to support non-string arguments
Add `--html-tree' option to for rendering to multi-page HTML
 with nested directories for nested parts
For HTML rendering, merge generated `style' attributes within
 a single tag

Older versions
See the "Racket core" release notes for a history of changes before
 the "scribble-lib" package was created.