@@ -4,6 +4,8 @@ Add `--html-tree' option to for rendering to multi-page HTML
  with nested directories for nested parts
 For HTML rendering, merge generated `style' attributes within
  a single tag
+scribble/manual: changed `deprecated` to a function, and
+ generalized it by adding an optional `#:what` argument
 
 Older versions
 See the "Racket core" release notes for a history of changes before
